updated client css

--- a/client/index.html
+++ b/client/index.html
@@ -10,11 +10,11 @@
 
 <body>
   <header>
-    <h1>Honkr</h1>
+    <h1>honkr</h1>
   </header>
   <main>
     <section id="create-honk-section">
-      <h2>Create a Honk</h2>
+      <h2>Honk!</h2>
       <form id="create-honk-form">
         <label for="author">Author:</label>
         <input type="text" id="author" name="author" required>
@@ -27,7 +27,7 @@
     </section>
 
     <section id="honks-section">
-      <h2>Honks</h2>
+      <h2>Honkline</h2>
       <ul id="honks-list"></ul>
     </section>
   </main>
