new name for app

--- a/client/index.html
+++ b/client/index.html
@@ -4,31 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Honkr</title>
+  <title>Skewpr</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <header>
-    <h1>honkr</h1>
+    <h1>skewpr</h1>
   </header>
   <main>
-    <section id="create-honk-section">
-      <h2>Honk!</h2>
-      <form id="create-honk-form">
+    <section id="create-skewp-section">
+      <h2>Skewp!</h2>
+      <form id="create-skewp-form">
         <label for="author">Author:</label>
         <input type="text" id="author" name="author" required>
 
         <label for="content">Content:</label>
         <textarea id="content" name="content" maxlength="280" required></textarea>
 
-        <button type="submit">Honk!</button>
+        <button type="submit">Skewp!</button>
       </form>
     </section>
 
-    <section id="honks-section">
-      <h2>Honkline</h2>
-      <ul id="honks-list"></ul>
+    <section id="skewps-section">
+      <h2>Skewpline</h2>
+      <ul id="skewps-list"></ul>
     </section>
   </main>
 </body>
