features added to skewpr

--- a/client/index.html
+++ b/client/index.html
@@ -28,9 +28,11 @@
 
     <section id="skewps-section">
       <h2>Skewpline</h2>
+      <button id="refresh">Refresh</button>
       <ul id="skewps-list"></ul>
     </section>
   </main>
+  <script src="script.js"></script>
 </body>
 
 </html>
