added clear form button

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
         <textarea id="content" name="content" maxlength="280" required></textarea>
 
         <button type="submit">Skewp!</button>
+        <button type="reset">Clear Form</button>
       </form>
     </section>
 
